cmake_minimum_required(VERSION 3.13)
project(GetMyOffer)

set(CMAKE_CXX_STANDARD 11)

add_executable(GetMyOffer
        main.cpp
        1-cmystring/cmystring.cpp
        2-duplicate/duplicate.cpp
        2-duplicate_2/duplicate_2.cpp
        2-find_2d_array/find2darray.cpp
        2-replace_blank/replaceblank.cpp
        bin_find/BinFind.cpp
        lookup_table/lookuptable.cpp
        Algorithm/search.cpp
        Algorithm/sort.cpp
        Algorithm/ceshi/search.cpp
        Algorithm/ceshi/sort.cpp)